# wtf-coronavirus-ohio

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  Pipfile  README.md  app.py  cache.py  pyproject.toml
.github/workflows/: ci.yml  main.yml
app/: __init__.py  cache.py  display.py  fetch.py  models.py  parse.py
app/tests/: test_display.py
ci/: push.sh
hooks/: build
tests/: test_app.py  test_display.py
