[tool.poetry]
name = "wtf-coronavirus-ohio"
version = "1.2.2"
description = "A WTF dashboard module for coronavirus data from ODH"
authors = ["Taylor D. Edmiston <tedmiston@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests-html = "^0.10.0"
requests-cache = "^0.5.2"
mypy = "^0.770"
pydantic = "^1.7.3"

[tool.poetry.dev-dependencies]
black = "*"
coverage = "*"
pytest = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
